# live-node-monitor

./: .dockerignore  .envrc.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yaml  log_monitor_config.yaml  pyproject.toml  test_log.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: isort.yaml  pytest.yaml  python-black.yaml  workflow-lint  workflow-lint.yaml  yamllint.yaml
scripts/: bootstrap.sh
src/: main.py  model.py  utils.py
src/components/: log_follow_component.py  log_monitor_config.yaml
src/components/base/: base_monitor.py
src/components/command_monitor/: monitor.py
src/components/log_monitor/: logparser.py  model.py  monitor.py  utils.py
tests/: test_cmd_monitor.py  test_log_monitor.py  test_model_parsing.py  test_utils.py
tests/fixtures/utils/: test_read_config_valid.yaml
