[tool.poetry]
name = "live-node-monitor"
version = "0.1.0"
description = ""
authors = ["Simon Rummert <09.milieu.motes@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
aiofile = "^3.8.8"
elasticsearch = {extras = ["async"], version = "^8.12.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
yamllint = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
